css/style.css
/* ... */
.mobile-display {
	display:none;
}

.nav-second>li>a:hover {
	color:#338bc5;
	text-decoration:underline;
}

.current_page_ancestor {
	background: #e7e7e7;
}

@media only screen and (min-width : 768px) {
	/* Make Navigation Toggle on Desktop Hover */
	.dropdown:hover .dropdown-menu {
		display:block;
	}

}

/* ---- Child Header ---- */
.header-bg-image-high {
	position:absolute;
	z-index:-99998;
	overflow:hidden;
	height: 200px;
	top: 0;
	min-width: 100%;
}

.header-bg-image-short {
	position:absolute;
	z-index:-99998;
	overflow:hidden;
	height:100px;
	top:0;
	min-width: 100%;
}

.header-bg-image-high img,
.header-bg-image-short img {
	position: relative;
	display: block;
	min-width: 100%;
	height: auto;
	width: auto;
}

.header-bg-image-high img {
	top: -50%;
}

.header-bg-image-short img {
	top: -100%;
}

.page-header-home {
	color:#fff;
	position:relative;
	padding:50px 27.5px;
}

.page-header-internal {
	color:#fff;
	position:relative;
	padding:15px 27.5px;
}

.child-header-tall {
	height:200px;
	overflow:hidden;
	display:block;
	width:100%;
	background:-moz-linear-gradient(right,rgba(0,0,0,.05) 2%,rgba(0,0,0,0.65) 100%);
/* FF3.6+ */
	background:-webkit-gradient(linear,right,left,color-stop(2%,rgba(0,0,0,0.65)),color-stop(100%,rgba(0,0,0,.05)));
/* Chrome,Safari4+ */
	background:-webkit-linear-gradient(right,rgba(0,0,0,.05) 2%,rgba(0,0,0,0.65) 100%);
/* Chrome10+,Safari5.1+ */
	background:-o-linear-gradient(right,rgba(0,0,0,.05) 2%,rgba(0,0,0,0.65) 100%);
/* Opera 11.10+ */
	background:-ms-linear-gradient(right,rgba(0,0,0,.05) 2%,rgba(0,0,0,0.65) 100%);
/* IE10+ */
	background:linear-gradient(to left,rgba(0,0,0,.05) 2%,rgba(0,0,0,0.65) 100%);
/* W3C */
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#a6000000',endColorstr='#00000000',GradientType=0);
/* IE6-9 */
}

.child-header-short {
	height:100px;
	overflow:hidden;
	display:block;
	width:100%;
	background:-moz-linear-gradient(right,rgba(0,0,0,.1) 2%,rgba(0,0,0,0.65) 100%);
/* FF3.6+ */
	background:-webkit-gradient(linear,right,left,color-stop(2%,rgba(0,0,0,0.65)),color-stop(100%,rgba(0,0,0,.1)));
/* Chrome,Safari4+ */
	background:-webkit-linear-gradient(right,rgba(0,0,0,.1) 2%,rgba(0,0,0,0.65) 100%);
/* Chrome10+,Safari5.1+ */
	background:-o-linear-gradient(right,rgba(0,0,0,.1) 2%,rgba(0,0,0,0.65) 100%);
/* Opera 11.10+ */
	background:-ms-linear-gradient(right,rgba(0,0,0,.1) 2%,rgba(0,0,0,0.65) 100%);
/* IE10+ */
	background:linear-gradient(to left,rgba(0,0,0,.1) 2%,rgba(0,0,0,0.65) 100%);
/* W3C */
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#a6000000',endColorstr='#00000000',GradientType=0);
/* IE6-9 */
}

.child-tagline {
	font-size:14px;
}

.child-page-title {
	font-size:36px;
	font-weight:400;
	line-height:2;
}

.child-page-title a {
	font-size:24px;
	color:#fff;
	line-height:1;
}

.child-page-title a:hover, .info-more,.info-more a,.link-hours-all,.info-more a:hover,.hours-today a:hover {
	color:#fff;
}

/* doc services extra header info */
.page-header-home .info-more,
.page-header-home .hours-today {
	font-size: 14px;
}


/* ---- Main Content Area ---- */
.content {
	margin-top: 2em;
	clear: both;
}

.childTheme .acontent {
	line-height: 1.5;
}

.has-sidebar .main-content {
	float: left;
	padding-right: 2em;
	width: 700px;
	width: 76.05%;
}

.ie8 .has-sidebar .main-content {
	width: 76%;
}

.main-content {
	width: 100%;
	padding-left: 27.5px;
	margin-bottom: 100px;
}

.main-content h3 {
	line-height: 1.5;
}

.entry-header,
.entry-description {
	line-height: 1.5;
}
.entry-title {
	font-size: 24px;
}

.error404 p {
	margin: 2em 0;
}

.entry-meta {
	margin: 1em 0;
	font-size: 14px;
	color: #777;
}

.entry-attachment .attachment {
	margin: .5em 0;
}

/* ---- Image and Caption Styles ---- */
.alignleft,
img.alignleft {
	display: inline;
	float: left;
	margin-right: 24px;
	margin-top: 4px;
}

.alignright,
img.alignright {
	display: inline;
	float: right;
	margin-left: 24px;
	margin-top: 4px;
}

.aligncenter,
img.aligncenter {
	clear: both;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

img.alignleft, img.alignright, img.aligncenter {
	margin-bottom: 12px;
}

.wp-caption,
figure {
	background: #efefef;
	color: #888;
	font-size: 12px;
	line-height: 18px;
	text-align: center;
	margin-bottom: 20px;
	padding: 4px;
	border-radius: 3px;
}

.wp-caption p.wp-caption-text,
figcaption {
	margin: 4px 8px;
}

dt.gallery-icon,
dd.wp-caption-text {
	background: #efefef;
	color: #888;
	font-size: 12px;
	line-height: 18px;
	text-align: center;
	padding: 4px;
}

dt.gallery-icon {
	border-radius: 3px 3px 0 0;
}

dd.wp-caption-text {
	border-radius 0 0 3px 3px;
	text-align: center;
}

.attachment a img {
	margin-top: 1em;
}

/* ---- Full Width Template Styles ---- */
.section-wrapper {
	padding-bottom: 50px;
	margin-bottom: 50px;
	border-bottom: 1px solid #888;
	float: left;
}

.section-wrapper-last {
	float: left;
	margin: 25px 0;
}

.main {
	float: left;
	padding-right: 2em;
	width: 76%;
}

.main p {
	margin-bottom: 1.25em ;
	line-height: 1.5;
}

.main h3 {
	font-size: 1.5em;
	font-weight: 700;
	padding: 1em 0;
}

.location-hours {
	font-weight: 700;
}

.contact-email {
	font-weight: bold;
}

.box {
	padding: 0 15px 10px;
	background: #eee;
	border: 1px solid #888;
	margin-bottom: 25px;
}

.box h4 {
	font-weight: 700;
	line-height: 1.5;
}

/* Post & Entry Content Styles */
.article-head h2 {
	font-size: 24px;
	font-weight: 600;
	line-height: 1.3;
}

.article-head h3 {
	font-size: 18px;
	font-weight: 600;
	margin-bottom: 5px;
}

.article-head p {
	font-size: 14px;
}

.article-head .cat-name {
	line-height:2;
	text-transform: uppercase;
	font-size: 16px;
	color: #777;
}

.childTheme .entry-content {
	padding:0 20px 20px 0;
}

.entry-content h1 {
	line-height:1;
	text-transform: uppercase;
	font-size: 14px;
	color: #777;
	margin-bottom: 10px;
}

.entry-content h2 {
	font-size:21px;
	font-size:1.3rem;
	line-height:1.3;
	font-weight: 600;
	padding: 30px 0 10px;
	margin-bottom: .2em;
}
/* ... */

